# cookiecutters

./: .gitmodules  README.md
python/: config.toml  cookiecutter.json
python-scrapy/: config.toml  cookiecutter.json
python-scrapy/$project_slug/: dot-envrc  dot-gitignore  pyproject.toml  scrapy.cfg
python-scrapy/$project_slug/$package_name/: items.py  middlewares.py  pipelines.py  settings.py
python/$project_slug/: Makefile  pyproject.toml
python/hooks/: post_gen_project.py
python/{{cookiecutter.project_slug}}/: Makefile  _envrc  pyproject.toml
