[project]
name = "$project_slug"
version = "0.1"
requires-python = ">=$python_version"
dependencies = [
  
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["{{ cookiecutter.package_name }}"]

[tool.pyright]
disableOrganizeImports = true
useLibraryCodeForTypes = true

[tool.ruff]
fix = true

[tool.ruff.lint]
select = ["E", "F", "I"]
